--- a/wiki_src/ChangeLog.wiki
+++ b/wiki_src/ChangeLog.wiki
@@ -32,6 +32,7 @@
     * generate header.tpl use dest file's encoding.
     * update gvim.exe link with python26.dll in windows.
     * add ex_try, ex_catch syntax highlight.
+    * add my method to judge if it is objc or mathlab files.
  * Bug fix
     * fix exQuickFix open a file another programme already editing issue.
     * fix exTagSelect show tags error when read preview from a file that already not exists.
