add /sub command, add TEST,PATCH keyword

--- a/wiki_src/ChangeLog.wiki
+++ b/wiki_src/ChangeLog.wiki
@@ -33,6 +33,8 @@
     * update gvim.exe link with python26.dll in windows.
     * add ex_try, ex_catch, ex_catch_exp, ex_throw syntax highlight.
     * add my method to judge if it is objc or mathlab files.
+    * add key-world TEST, PATCH
+    * add `<leader>sub` for quick substitue word_highlight_1 to word_highlight_2
  * Bug fix
     * fix exQuickFix open a file another programme already editing issue.
     * fix exTagSelect show tags error when read preview from a file that already not exists.
