--- a/wiki_src/DefaultMappingsAndCommands.wiki
+++ b/wiki_src/DefaultMappingsAndCommands.wiki
@@ -32,6 +32,8 @@
 ||`\gv` ||Process current word under cursor as class-name, show its inherit map by your image viewer. ||
 ||`\mk` (in visual mode) ||Insert mark lable you entered between the block you select. ||
 ||`\mk` (in normal mode) ||Remove special mark lable while your cursor in it. ||
+||`\sub` (in visual mode) ||substitue highlight word 1(alt+1) to highlight word 2(alt+2) in the visual block. ||
+||`\sub` (in normal mode) ||substitue highlight word 1(alt+1) to highlight word 2(alt+2) in the whole buffer. ||
 ||`alt+F1`, in terminal: `\<F1>` ||Switch to encoding latin1 (Default). ||
 ||`alt+F2`, in terminal: `\<F2>` ||Switch to encoding cp936(Chinese). ||
 ||`alt+F3`, in terminal: `\<F3>` ||Remove to encoding cp932(Japanese). ||
