add ex_safe_delete,ex_safe_free syntax highlight

--- a/wiki_src/ChangeLog.wiki
+++ b/wiki_src/ChangeLog.wiki
@@ -31,7 +31,7 @@
     * let exProject ignore checking .vimfiles folders when browsing.
     * generate header.tpl use dest file's encoding.
     * update gvim.exe link with python26.dll in windows.
-    * add ex_try, ex_catch, ex_catch_exp, ex_throw syntax highlight.
+    * add ex_try, ex_catch, ex_catch_exp, ex_throw, ex_safe_delete, ex_safe_free... syntax highlight.
     * add my method to judge if it is objc or mathlab files.
     * add key-world TEST, PATCH, FIXME, BUG, TIPS, HINT
     * add `<leader>sub` for quick substitue word_highlight_1 to word_highlight_2
