--- a/wiki_src/DevLog.wiki
+++ b/wiki_src/DevLog.wiki
@@ -78,3 +78,4 @@ Then go to another repo, pull everything, then use chery-pick to get the changes
  * snipMate - 0.83             http://www.vim.org/scripts/script.php?script_id=2540
  * zencoding - 2010/4/27       http://www.vim.org/scripts/script.php?script_id=2981
  * matchit - 1.13.2            http://www.vim.org/scripts/script.php?script_id=39
+ * django - 0.1                http://www.vim.org/scripts/script.php?script_id=1487
