--- a/wiki/devlog.wiki
+++ b/wiki/devlog.wiki
@@ -1,7 +1,7 @@
 <!-- ======================================================================================-->
-<!-- File         : DevLog.wiki-->
+<!-- File         : devlog.wiki-->
 <!-- Author       : Wu Jie -->
-<!-- Last Change  : 01/05/2010 | 17:07:35 PM | Tuesday,January-->
+<!-- Last Change  : 05/14/2010 | 11:04:54 AM | Friday,May-->
 <!-- Description  : -->
 <!-- ======================================================================================-->
 
